// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render 1`] = `
<div>
  <button
    class="sc-AxjAm hiBvgP"
    type="button"
  />
</div>
`;

exports[`Button should render a large one 1`] = `
<div>
  <button
    class="sc-AxjAm fHDbKG"
    type="button"
  />
</div>
`;

exports[`Button should render a small one 1`] = `
<div>
  <button
    class="sc-AxjAm dwkbra"
    type="button"
  />
</div>
`;

exports[`Button should render an icon 1`] = `
<div>
  <button
    class="sc-AxjAm kkpypD"
    type="button"
  />
</div>
`;

exports[`Button should render as danger button 1`] = `
<div>
  <button
    class="sc-AxjAm gXEWLm"
    type="button"
  />
</div>
`;

exports[`Button should render as primary button 1`] = `
<div>
  <button
    class="sc-AxjAm hiBvgP"
    type="button"
  />
</div>
`;

exports[`Button should render as secondary button 1`] = `
<div>
  <button
    class="sc-AxjAm dEdzdP"
    type="button"
  />
</div>
`;

exports[`Button should render as transparent button 1`] = `
<div>
  <button
    class="sc-AxjAm jxyvfA"
    type="button"
  />
</div>
`;

exports[`Button should render if disabled 1`] = `
<DocumentFragment>
  <button
    class="sc-AxjAm jWBCsI"
    disabled=""
    type="button"
  >
    Click
  </button>
</DocumentFragment>
`;
